// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataRepo - event 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "evt": "created",
        "payload": Object {
          "id": 2,
          "name": "new",
        },
      },
    ],
    Array [
      Object {
        "evt": "updated",
        "payload": Object {
          "id": 2,
          "name": "new_1",
        },
      },
    ],
    Array [
      Object {
        "evt": "deleted",
        "payload": Object {
          "id": 2,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`DataRepo - query data sources 1`] = `
Object {
  "data": Array [
    Object {
      "id": 0,
      "name": "t1",
    },
    Object {
      "id": 1,
      "name": "t2",
    },
  ],
  "status": "success",
}
`;

exports[`DataRepo - remote 1`] = `
Object {
  "head": Any<String>,
  "items": Object {
    "0": Object {
      "_id": 0,
      "name": "t1",
    },
    "1": Object {
      "_id": 1,
      "name": "t2",
    },
  },
}
`;

exports[`DataRepo - remote 2`] = `
Object {
  "head": Any<String>,
  "items": Object {
    "1": Object {
      "_id": 1,
      "name": "updated name",
    },
    "2": Object {
      "_id": 2,
      "name": "new",
    },
  },
}
`;

exports[`DataRepo - rpc test 1`] = `
Array [
  Object {
    "data": "pong",
    "status": "success",
  },
  Object {
    "data": "pong",
    "status": "success",
  },
  Object {
    "data": "pong",
    "status": "success",
  },
]
`;
